fix(TAP-9242): JOIN node main table link fully labeled as main table